--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -5,7 +5,7 @@
   "contactus": "Contact Us",
   "crypto": "Crypto",
   "joinus": "Join Us",
-  "aboutustext": "Technology is a high-tech company operating in the fields of  hydrogen and artificial intelligence. Our mission is to fund projects that generate carbon credits, thereby attracting funds for the overall collective well-being of every global citizen. This entire process will be channeled into the carbon credit exchange ecosystem. The creation of carbon credits extends across various  sectors such as energy, high technology, natural resources, education, and several others. Together, we provide a sustainable solution, passing on to future generations a better future and a greener planet.",
+  "aboutustext": "Technology is a high-tech company operating in the fields of hydrogen and artificial intelligence. Our mission is to fund projects that generate carbon credits, thereby attracting financing for the overall collective well-being of every global citizen. This entire process will be channeled into the Carbon Credit Exchange ecosystem. The creation of carbon credits extends across various sectors such as energy, high technology, natural resources, education, and several others. Together, we provide a sustainable solution, passing on to future generations a better, cleaner and a greener planet.",
   "companyname": "Waven",
 
   "ourmission": "OUR MISSION",
